# SVETlANNa.docs

./: .gitignore  404.html  CONTRIBUTING.md  README.md  README.ru.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
GPU/: 512_optical_setup.ipynb  CPU_mnist_mse.ipynb  GPU_512_mnist_mse.ipynb  GPU_512_mnist_mse.py  GPU_512_mnist_mse_fix.ipynb  GPU_apertures.ipynb  GPU_mnist_mse.ipynb  apertures_GPU.ipynb
clerk/: example.ipynb
custom_elements/: hello_world_element.ipynb
debug/: logging.ipynb
docs/: index.md
docs/css/: extra.css
docs/reference/: linear_optical_setup.md  logging.md  parameters.md  partial_with_parameters.md  simulation_parameters.md  specs.md  svetlanna.md  units.md  visualization.md  wavefront.md
examples/GPU/: 512_optical_setup.ipynb  CPU_mnist_mse.ipynb  GPU_512_mnist_mse.ipynb  GPU_512_mnist_mse.py  GPU_512_mnist_mse_fix.ipynb
examples/clerk/: .gitignore  example.ipynb
examples/custom_elements/: hello_world_element.ipynb
examples/free_propagation/: apertures.ipynb  gaussian_beam_propagation.ipynb  lens.ipynb  rectangular_slit_propagation.ipynb
examples/pipelines/: .gitignore  02_mnist_by_ozcan.ipynb  03_load_experiments.ipynb  04_4f-system.ipynb  05_reservoir_mackey_glass.ipynb  08_autoencoder.ipynb  08_load_autoencoder.ipynb  09_convolutional_4f.ipynb
examples/specs/: example.ipynb
examples/tensor_axes/: example.ipynb
examples/visualization/: example.ipynb
examples_ru/GPU/: 512_optical_setup.py  GPU_512_mnist_mse.ipynb  GPU_apertures.ipynb  GPU_mnist_mse.ipynb  apertures_gpu.ipynb  gpu_usage_example.ipynb
free_propagation/: apertures.ipynb  gaussian_beam_propagation.ipynb  lens.ipynb  nonlinear_element.ipynb  rectangular_slit_propagation.ipynb  slm.ipynb  square_aperture_propagation.ipynb
phase_retrieval/: optimize_example.ipynb  optimize_lowapi_example.ipynb  sin_grating.ipynb
pipelines/: .gitignore  01_datasets.ipynb  01_datasets_v2.ipynb  02_mnist_mse.ipynb  03_load_experiments.ipynb  03_mnist_experiments.ipynb  04_4f-system.ipynb  05_reservoir_mackey_glass.ipynb  06_fashion-mnist_by_ozcan.ipynb  07_load_weizmann_drnn.ipynb  07_weizmann_drnn.ipynb  08_autoencoder.ipynb  08_load_autoencoder.ipynb  09_convolutional_4f.ipynb
scripts/: __init__.py
search/: search_index.json
specs/: example.ipynb
tensor_axes/: example.ipynb
visualization/: example.ipynb
(+125 files in other folders)
