[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "<2.0"
torch = "^2.4.0"
matplotlib = "<3.9.2"
torchvision = "^0.19.1"
# our package
svetlanna = { path = "../SVETlANNa/", develop = true }

pytest = "^8.3.2"
jupyter = "^1.1.1"
tqdm = "^4.66.5"
scipy = "^1.14.1"
tensorboard = "^2.18.0"
# for the Mackey-Glass time-series generation
reservoirpy = "^0.3.12"
# for Weizmann dataset downloading and processing
requests = "^2.32.3"
av = "^14.1.0"
scikit-image = "^0.25.1"
anywidget = "^0.9.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
