[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "<2.0"

# our package
svetlanna = { git = "https://github.com/CompPhysLab/SVETlANNa.git", branch = "dev" }

matplotlib = "<3.9.2"
jupyter = "^1.1.1"
tqdm = "^4.66.5"
scipy = "^1.14.1"
# for the Mackey-Glass time-series generation
reservoirpy = "^0.3.12"
# for Weizmann dataset downloading and processing
requests = "^2.32.3"
av = "^14.1.0"
scikit-image = "^0.25.1"

[tool.poetry.group.dev.dependencies]
py-cpuinfo = "^9.0.0"
gputil = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"